objects/CMPL123__WF_Status__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123__Description__c</fullName>
        <description>Description</description>
        <inlineHelpText>Status Description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Status_Custom_Label__c</fullName>
        <inlineHelpText>Enter the Name for the Custom Label exactly as it appears on that label in Setup.</inlineHelpText>
        <label>Status Custom Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__WF_Status_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>WF Status External Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <description>Workflow Statuses</description>
    <label>Workflow Status</label>
    <nameField>
        <label>Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflow Statuses</pluralLabel>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>CMPL123__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123__Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CMPL123__Status_Custom_Label__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>